# mkr_engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  alpha__blend__shader_8h.html  alpha__blend__shader_8h__dep__incl.map  alpha__blend__shader_8h__dep__incl.md5  alpha__blend__shader_8h__incl.map  alpha__blend__shader_8h__incl.md5  alpha__blend__shader_8h_source.html  alpha__buffer_8h.html  alpha__buffer_8h__dep__incl.map  alpha__buffer_8h__dep__incl.md5  alpha__buffer_8h__incl.map  alpha__buffer_8h__incl.md5  alpha__buffer_8h_source.html  alpha__weight__shader_8cpp.html  alpha__weight__shader_8cpp__incl.map  alpha__weight__shader_8cpp__incl.md5  alpha__weight__shader_8cpp_source.html  alpha__weight__shader_8h.html  alpha__weight__shader_8h__dep__incl.map  alpha__weight__shader_8h__dep__incl.md5  alpha__weight__shader_8h__incl.map  alpha__weight__shader_8h__incl.md5  alpha__weight__shader_8h_source.html  annotated.html  app__window_8h.html  app__window_8h__dep__incl.map  app__window_8h__dep__incl.md5  app__window_8h__incl.map  app__window_8h__incl.md5  app__window_8h_source.html  application_8cpp.html  application_8cpp__incl.map  application_8cpp__incl.md5  application_8cpp_source.html  application_8h.html  application_8h__dep__incl.map  application_8h__dep__incl.md5  (+1415 more)
assets/shaders/: forward.frag  forward.fs  forward.vert  forward.vs  fpass.frag  fragment_shader.fs  fshader.frag  geometry.frag  geometry.vert  gpass.frag  gpass.vert  gshader.frag  gshader.vert  light.frag  lighting.frag  lighting.incl  lighting.vert  lpass.frag  lshader.frag  parallax.incl  post_proc_blur.frag  post_proc_greyscale.frag  post_proc_invert.frag  post_proc_outline.frag  pshader_blur.frag  pshader_greyscale.frag  pshader_invert.frag  shadow.incl  shadow_2d.frag  shadow_2d.vert  shadow_cubemap.frag  shadow_cubemap.geom  shadow_cubemap.vert  skybox.frag  skybox.fs  skybox.vert  skybox.vs  sshader.vert  vertex_shader.vs
assets/shaders/alpha/: alpha_blend.vert  alpha_weight.frag
assets/shaders/deferred/: geometry.frag  lighting.frag
assets/shaders/forward/: forward.frag  forward.vert
assets/shaders/include/: parallax.incl  shadow.incl
assets/shaders/post/: post_proc.vert
assets/shaders/shadow/: shadow_cubemap.frag  shadow_cubemap.geom
assets/shaders/skybox/: skybox.vert
dep/sdl2/: VERSION.txt
dep/spdlog/: LICENSE
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  (+95 more)
src/: main.cpp
src/application/: application.cpp  application.h  sdl_event_poller.cpp  sdl_event_poller.h  sdl_event_system.cpp  sdl_event_system.h  sdl_message_pump.cpp  sdl_message_pump.h
src/component/: camera.h  camera_component.h  light.cpp  light.h  light_component.h  local_to_world.h  mesh_render.h  mesh_renderer.h  render_component.h  render_mesh.h  tag.h  transform.h  transform_component.h
src/ecs/: ecs_id.cpp  ecs_id.h
src/ecs/component/: local_to_world.h  renderable.h  restricted.h  tags.h  transform.h
src/ecs/scene/: pool.cpp  pool.h  scene.cpp  scene.h
src/ecs/system/: local_to_world_system.h  renderable_system.h  system.h
src/event/: event.h  event_dispatcher.h  event_listener.h
src/game/input/: game_controls.h
src/game/scene/: demo_scene.cpp  demo_scene.h  game_scene.cpp  game_scene.h  test_scene.cpp  test_scene.h
src/game/system/: body_control_system.h  head_control_system.h  motion_test_system.h  player_movement.h  quit_system.h
src/game/tag/: game_tags.h  tag.h
src/graphics/: app_window.h  asset_loader.cpp  asset_loader.h  ebo.h  framebuffer.cpp  framebuffer.h  graphics_system.h  material.cpp  material.h  mesh.h  pixel_format.h  render_path.h  renderer.cpp  renderer.h  shader_program.cpp  shader_program.h  shader_uniform.h  skybox.h  texture.h  vao.h  vbo.h  vertex.h
src/graphics/asset_loader/: asset_loader.cpp  asset_loader.h
src/graphics/framebuffer/: alpha_buffer.h  default_buffer.cpp  default_buffer.h  forward_buffer.cpp  forward_buffer.h  framebuffer.cpp  framebuffer.h  geometry_buffer.cpp  geometry_buffer.h  light_buffer.cpp  light_buffer.h  lighting_buffer.h  post_buffer.h  post_proc_buffer.cpp  post_proc_buffer.h  shadow_2d_buffer.h  shadow_buffer.cpp  shadow_buffer.h  shadow_cubemap_buffer.h
src/graphics/lighting/: lighting.cpp  lighting.h  skybox.h
src/graphics/material/: material.cpp  material.h  material_manager.h  render_path.h
src/graphics/mesh/: mesh.h  mesh_builder.h  mesh_instance_data.h  mesh_manager.h  vao.h  vertex.h
src/graphics/renderer/: graphics_renderer.cpp  graphics_renderer.h  stencil.h
src/graphics/shader/: alpha_blend_shader.h  alpha_weight_shader.cpp  alpha_weight_shader.h  forward_shader.cpp  forward_shader.h  geometry_shader.cpp  geometry_shader.h  light_shader.cpp  light_shader.h  lighting_shader.cpp  lighting_shader.h  (+10 more)
src/input/: axis1d_handler.cpp  axis1d_handler.h  axis_handler.cpp  axis_handler.h  bool_handler.cpp  bool_handler.h  button_handler.cpp  button_handler.h  click_handler.cpp  click_handler.h  gamepad_axis.h  gamepad_button.h  input.h  input_event.h  input_helper.h  input_manager.cpp  input_manager.h  input_system.cpp  input_system.h  keyboard_button.h  keyboard_handler.cpp  keyboard_handler.h  keycode.h  motion_handler.cpp  motion_handler.h  mouse_axis.h  mouse_button.h  sdl_to_controller_index.h  sdl_to_gamepad.h  sdl_to_keyboard.h  sdl_to_keycode.h  sdl_to_mouse.h
src/log/: log.h
src/scene/: scene.cpp  scene.h  scene_loader.h  scene_manager.cpp  scene_manager.h  test_scene.cpp  test_scene.h
src/sdl/: sdl_api.cpp  sdl_api.h
src/shaders/: vertex_shader.vs
src/system/: cam_control.h  cube_control.h  game_controls.h  input_names.h  system.h  systems.cpp  systems.h
src/util/: file_util.h
(+7 files in other folders)
